feature-templates/nCino/dataset/01yO3G1U-Product Hierarchy/.store/metadata/objects/LLC_BI__Funding_Method_Type__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>The administrator populates this required picklist field to determine Funding Method Type used. By default, it is blank.</description>
        <inlineHelpText>Select the type of funding for the account.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Screen_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. The user manually populates this field. It relates a screen section to a funding method type.</description>
        <label>Screen Section</label>
        <referenceTo>nFORCE__Screen_Section__c</referenceTo>
        <relationshipLabel>Funding Method Types</relationshipLabel>
        <relationshipName>Funding_Method_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The system automatically populates this field with a unique external identifier that associates the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a unique external identifier.</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Funding Method Type</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Funding Method Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Method Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>